fix header spacing

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -8,6 +8,7 @@
   align-items: center;
   width: 100%;
   height: $headerSpacing;
+  top: 0;
 }
 
 .header {
@@ -16,6 +17,8 @@
   align-items: center;
   justify-content: space-between;
   background-color: $primaryColor;
+  height: $headerSpacing;
+  
 
   @include largeScreen {
     width: 75%;
