--- a/src/scss/_landing-page.scss
+++ b/src/scss/_landing-page.scss
@@ -3,12 +3,14 @@
 .landing-page {
   position: relative;
   height: 100vh;
+  padding-top: 78px;
 
   .background-video {
     position: absolute;
     height: 100%;
     width: 100%;
     overflow: hidden;
+    top: 0;
 
     img {
       width: 100%;
@@ -22,14 +24,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height: 100%;
     color: $secondaryColor;
     padding: $spacing;
-    padding-top: $headerSpacing;
+    padding-top: 48px;
 
     .logo-container {
-      height: 250px;
+      height: 150px;
 
       img {
         height: 100%;
@@ -47,7 +48,7 @@
       font-size: $mediumFont;
       text-shadow: 3px 3px 6px #000;
       text-align: center;
-      padding: $spacing;
+      padding-bottom: $spacing;
     }
   }
 }
